// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden replays > abgrund defense A 1`] = `
"w1 ready lives=20 gold=131 kills=7 towerKills=7/0/0
w2 ready lives=20 gold=180 kills=15 towerKills=15/0/0
w3 ready lives=20 gold=176 kills=20 towerKills=19/0/1
w4 ready lives=18 gold=171 kills=26 towerKills=25/0/1
w5 ready lives=18 gold=225 kills=41 towerKills=30/6/5/0
w6 ready lives=18 gold=356 kills=52 towerKills=40/6/6/0
w7 ready lives=18 gold=377 kills=65 towerKills=45/13/7/0
w8 ready lives=18 gold=293 kills=71 towerKills=48/16/7/0
w9 ready lives=18 gold=465 kills=96 towerKills=61/24/9/0/2
w10 ready lives=18 gold=293 kills=103 towerKills=64/25/9/0/5
w11 ready lives=18 gold=261 kills=117 towerKills=73/25/10/0/8/1
w12 ready lives=18 gold=316 kills=129 towerKills=78/27/13/0/8/3
w13 ready lives=18 gold=275 kills=139 towerKills=81/29/15/0/10/4/0
w14 ready lives=18 gold=372 kills=157 towerKills=87/32/17/0/11/8/2
w15 ready lives=18 gold=336 kills=174 towerKills=94/32/17/0/14/12/5
w16 ready lives=18 gold=349 kills=184 towerKills=96/32/21/0/14/16/5/0
w17 ready lives=18 gold=346 kills=197 towerKills=99/33/24/0/18/17/6/0/0
w18 ready lives=18 gold=368 kills=206 towerKills=103/34/26/0/20/17/6/0/0
w19 ready lives=18 gold=372 kills=225 towerKills=111/35/29/0/23/17/7/0/3
w20 won lives=8 gold=879 kills=242 towerKills=117/36/33/0/24/17/8/1/4/2"
`;

exports[`golden replays > abgrund defense A 2`] = `"w20 won lives=8 gold=879 kills=242 towerKills=117/36/33/0/24/17/8/1/4/2"`;

exports[`golden replays > abgrund defense B 1`] = `
"w1 ready lives=20 gold=131 kills=7 towerKills=7/0/0
w2 ready lives=20 gold=180 kills=15 towerKills=15/0/0
w3 ready lives=20 gold=176 kills=20 towerKills=19/0/1
w4 ready lives=18 gold=171 kills=26 towerKills=25/0/1
w5 ready lives=18 gold=225 kills=41 towerKills=30/6/5/0
w6 ready lives=18 gold=356 kills=52 towerKills=40/6/6/0
w7 ready lives=18 gold=217 kills=65 towerKills=45/13/7/0/0
w8 ready lives=18 gold=259 kills=71 towerKills=46/17/7/0/1
w9 ready lives=18 gold=361 kills=96 towerKills=55/28/10/0/3
w10 ready lives=18 gold=327 kills=103 towerKills=58/29/10/0/6
w11 ready lives=18 gold=295 kills=117 towerKills=67/31/12/0/7/0
w12 ready lives=16 gold=324 kills=128 towerKills=71/31/17/0/9/0
w13 ready lives=16 gold=397 kills=138 towerKills=75/31/22/0/9/1/0
w14 ready lives=16 gold=414 kills=156 towerKills=83/36/23/0/11/1/1/1
w15 ready lives=16 gold=330 kills=173 towerKills=93/38/23/0/11/1/1/6
w16 ready lives=16 gold=328 kills=183 towerKills=96/39/27/0/12/1/2/6
w17 ready lives=16 gold=385 kills=196 towerKills=99/40/29/0/16/1/2/9/0
w18 ready lives=16 gold=470 kills=205 towerKills=101/41/33/0/16/1/2/11/0
w19 ready lives=13 gold=427 kills=221 towerKills=112/42/35/0/17/1/2/12/0
w20 won lives=3 gold=829 kills=238 towerKills=120/44/38/0/18/1/4/12/1"
`;

exports[`golden replays > abgrund defense B 2`] = `"w20 won lives=3 gold=829 kills=238 towerKills=120/44/38/0/18/1/4/12/1"`;

exports[`golden replays > brandung defense A 1`] = `
"w2 wave lives=20 gold=118 kills=0 towerKills=0
w3 wave lives=20 gold=255 kills=11 towerKills=11
w4 wave lives=20 gold=149 kills=18 towerKills=17/0/1
w5 wave lives=20 gold=185 kills=26 towerKills=23/2/1
w6 wave lives=20 gold=306 kills=41 towerKills=34/6/1
w7 wave lives=20 gold=269 kills=51 towerKills=37/6/8/0
w8 wave lives=20 gold=261 kills=63 towerKills=42/6/15/0
w9 wave lives=20 gold=299 kills=81 towerKills=56/7/15/3
w10 wave lives=20 gold=334 kills=99 towerKills=61/12/22/4
w11 wave lives=20 gold=267 kills=112 towerKills=67/15/22/8
w12 wave lives=20 gold=269 kills=123 towerKills=71/16/28/8/0
w12 won lives=20 gold=1201 kills=171 towerKills=86/22/33/10/20"
`;

exports[`golden replays > brandung defense A 2`] = `"w12 won lives=20 gold=1201 kills=171 towerKills=86/22/33/10/20"`;

exports[`golden replays > brandung defense B 1`] = `
"w2 wave lives=20 gold=38 kills=0 towerKills=0/0
w3 wave lives=20 gold=165 kills=10 towerKills=10/0
w4 wave lives=20 gold=146 kills=16 towerKills=12/4
w5 wave lives=20 gold=201 kills=26 towerKills=20/5/1
w6 wave lives=20 gold=246 kills=39 towerKills=30/7/1/1
w7 wave lives=20 gold=167 kills=43 towerKills=31/9/2/1
w8 wave lives=20 gold=345 kills=62 towerKills=34/13/10/5
w9 wave lives=20 gold=233 kills=75 towerKills=41/18/10/6/0
w10 wave lives=20 gold=339 kills=97 towerKills=54/21/13/8/1/0
w11 wave lives=20 gold=434 kills=122 towerKills=60/29/13/16/4/0
w12 wave lives=20 gold=356 kills=125 towerKills=60/30/15/16/4/0
w12 won lives=20 gold=1329 kills=171 towerKills=70/37/25/31/8/0"
`;

exports[`golden replays > brandung defense B 2`] = `"w12 won lives=20 gold=1329 kills=171 towerKills=70/37/25/31/8/0"`;

exports[`golden replays > doppelschleife defense A 1`] = `
"w2 wave lives=20 gold=186 kills=12 towerKills=12/0
w3 wave lives=20 gold=410 kills=44 towerKills=36/8
w4 wave lives=20 gold=309 kills=64 towerKills=46/17/1
w5 wave lives=20 gold=332 kills=82 towerKills=50/30/2/0
w6 wave lives=20 gold=370 kills=97 towerKills=55/40/2/0
w7 wave lives=20 gold=561 kills=133 towerKills=78/49/3/3
w8 wave lives=20 gold=513 kills=172 towerKills=94/62/7/9
w9 wave lives=20 gold=404 kills=198 towerKills=108/72/7/11/0
w9 won lives=20 gold=878 kills=254 towerKills=143/89/7/13/2"
`;

exports[`golden replays > doppelschleife defense A 2`] = `"w9 won lives=20 gold=878 kills=254 towerKills=143/89/7/13/2"`;

exports[`golden replays > doppelschleife defense B 1`] = `
"w2 wave lives=20 gold=173 kills=12 towerKills=11/1
w3 wave lives=20 gold=397 kills=44 towerKills=15/29
w4 wave lives=20 gold=296 kills=64 towerKills=17/43/4
w5 wave lives=20 gold=319 kills=82 towerKills=21/57/4/0
w6 wave lives=20 gold=357 kills=97 towerKills=23/68/6/0
w7 wave lives=20 gold=406 kills=130 towerKills=39/78/13/0/0
w8 wave lives=20 gold=533 kills=172 towerKills=55/95/19/0/0/3
w9 wave lives=20 gold=334 kills=195 towerKills=59/106/27/0/0/3/0
w9 won lives=20 gold=1030 kills=254 towerKills=71/120/45/1/6/11/0"
`;

exports[`golden replays > doppelschleife defense B 2`] = `"w9 won lives=20 gold=1030 kills=254 towerKills=71/120/45/1/6/11/0"`;

exports[`golden replays > geodenkammer defense A 1`] = `
"w1 ready lives=10 gold=157 kills=9 towerKills=9/0
w2 ready lives=10 gold=293 kills=27 towerKills=19/7/1
w3 ready lives=10 gold=290 kills=41 towerKills=26/11/4
w4 ready lives=10 gold=193 kills=49 towerKills=29/16/4
w5 ready lives=10 gold=354 kills=66 towerKills=38/22/6/0
w6 ready lives=10 gold=478 kills=97 towerKills=56/30/8/3
w7 ready lives=10 gold=257 kills=108 towerKills=66/30/9/3/0
w8 ready lives=10 gold=560 kills=136 towerKills=73/43/11/6/3
w9 ready lives=8 gold=337 kills=146 towerKills=73/46/11/7/8/1
w10 ready lives=8 gold=518 kills=186 towerKills=82/60/15/7/18/4/0
w11 ready lives=8 gold=317 kills=192 towerKills=86/60/16/7/18/4/0/1
w12 ready lives=5 gold=689 kills=223 towerKills=93/76/18/8/20/5/0/3
w13 ready lives=5 gold=431 kills=239 towerKills=102/76/20/8/22/7/1/3
w14 ready lives=5 gold=623 kills=273 towerKills=115/85/21/12/24/8/1/7
w15 ready lives=5 gold=824 kills=304 towerKills=125/92/23/13/26/9/6/10
w16 ready lives=5 gold=743 kills=357 towerKills=137/108/26/14/32/17/7/16
w17 ready lives=5 gold=608 kills=365 towerKills=140/108/27/14/32/18/8/18
w18 won lives=5 gold=882 kills=399 towerKills=146/119/31/15/38/20/8/22"
`;

exports[`golden replays > geodenkammer defense A 2`] = `"w18 won lives=5 gold=882 kills=399 towerKills=146/119/31/15/38/20/8/22"`;

exports[`golden replays > geodenkammer defense B 1`] = `
"w1 ready lives=10 gold=157 kills=9 towerKills=9/0
w2 ready lives=10 gold=263 kills=27 towerKills=17/7/3
w3 ready lives=10 gold=283 kills=41 towerKills=27/11/3/0
w4 ready lives=10 gold=216 kills=49 towerKills=31/15/3/0
w5 ready lives=10 gold=302 kills=66 towerKills=37/22/4/3
w6 ready lives=10 gold=444 kills=97 towerKills=50/32/11/4
w7 ready lives=10 gold=373 kills=108 towerKills=56/32/16/4
w8 ready lives=10 gold=451 kills=136 towerKills=72/40/16/8
w9 ready lives=10 gold=334 kills=147 towerKills=78/43/18/8
w10 ready lives=10 gold=545 kills=187 towerKills=87/56/33/9/2
w11 ready lives=10 gold=329 kills=193 towerKills=90/56/35/9/2/1
w12 ready lives=10 gold=689 kills=227 towerKills=99/68/37/13/8/2
w13 ready lives=10 gold=371 kills=243 towerKills=102/68/43/13/9/7/1
w14 ready lives=8 gold=676 kills=275 towerKills=111/78/44/14/15/9/4
w15 ready lives=6 gold=808 kills=305 towerKills=122/90/45/15/18/10/5
w16 ready lives=6 gold=1072 kills=358 towerKills=135/108/54/16/20/15/10
w17 ready lives=6 gold=487 kills=366 towerKills=137/108/57/16/21/17/10
w18 won lives=6 gold=1211 kills=400 towerKills=142/121/57/20/25/20/15"
`;

exports[`golden replays > geodenkammer defense B 2`] = `"w18 won lives=6 gold=1211 kills=400 towerKills=142/121/57/20/25/20/15"`;

exports[`golden replays > giftkessel defense A 1`] = `
"w1 ready lives=20 gold=201 kills=12 towerKills=12
w2 ready lives=20 gold=305 kills=30 towerKills=30/0
w3 ready lives=13 gold=259 kills=49 towerKills=48/1
w4 ready lives=13 gold=249 kills=63 towerKills=56/6/0/1
w5 ready lives=13 gold=416 kills=88 towerKills=63/7/7/11
w6 ready lives=13 gold=358 kills=106 towerKills=64/8/12/22
w7 ready lives=13 gold=503 kills=143 towerKills=77/8/23/35/0
w8 ready lives=9 gold=541 kills=182 towerKills=82/12/34/51/0/3
w9 ready lives=9 gold=539 kills=214 towerKills=91/13/38/59/0/7/6
w10 ready lives=9 gold=810 kills=273 towerKills=103/15/43/76/0/13/23
w11 ready lives=9 gold=706 kills=308 towerKills=118/16/46/78/0/18/32
w12 ready lives=9 gold=717 kills=351 towerKills=125/17/49/81/0/22/57/0
w13 ready lives=9 gold=940 kills=422 towerKills=134/26/55/87/0/27/82/11
w14 ready lives=9 gold=949 kills=486 towerKills=141/29/64/92/0/38/102/20
w15 won lives=9 gold=1280 kills=545 towerKills=152/32/69/99/0/45/116/32/0"
`;

exports[`golden replays > giftkessel defense A 2`] = `"w15 won lives=9 gold=1280 kills=545 towerKills=152/32/69/99/0/45/116/32/0"`;

exports[`golden replays > giftkessel defense B 1`] = `
"w1 ready lives=20 gold=206 kills=12 towerKills=12/0
w2 ready lives=20 gold=300 kills=30 towerKills=14/16
w3 ready lives=20 gold=370 kills=56 towerKills=27/29
w4 ready lives=20 gold=260 kills=70 towerKills=32/38/0
w5 ready lives=20 gold=429 kills=95 towerKills=39/56/0
w6 ready lives=20 gold=371 kills=113 towerKills=41/72/0
w7 ready lives=15 gold=527 kills=146 towerKills=42/99/0/5
w8 ready lives=13 gold=592 kills=186 towerKills=47/120/0/14/5
w9 ready lives=11 gold=502 kills=217 towerKills=51/126/0/22/18
w10 ready lives=11 gold=908 kills=276 towerKills=54/136/0/42/44
w11 ready lives=11 gold=710 kills=311 towerKills=58/140/0/45/67/1/0
w12 ready lives=11 gold=771 kills=354 towerKills=63/152/0/50/84/4/0/1
w13 ready lives=11 gold=949 kills=425 towerKills=69/157/0/57/121/6/12/3
w14 ready lives=7 gold=993 kills=487 towerKills=79/161/0/69/140/8/22/8
w15 won lives=7 gold=1339 kills=546 towerKills=83/171/0/86/152/12/31/11/0"
`;

exports[`golden replays > giftkessel defense B 2`] = `"w15 won lives=7 gold=1339 kills=546 towerKills=83/171/0/86/152/12/31/11/0"`;

exports[`golden replays > hemmung defense A 1`] = `
"w2 wave lives=20 gold=158 kills=10 towerKills=10
w3 wave lives=20 gold=355 kills=21 towerKills=21
w4 wave lives=20 gold=257 kills=37 towerKills=37/0
w5 wave lives=20 gold=217 kills=45 towerKills=44/1
w6 wave lives=20 gold=342 kills=65 towerKills=60/5/0
w7 wave lives=20 gold=309 kills=86 towerKills=72/6/6/2
w8 wave lives=20 gold=297 kills=96 towerKills=80/6/8/2/0
w9 wave lives=20 gold=362 kills=120 towerKills=94/8/10/4/0/4
w10 wave lives=20 gold=342 kills=136 towerKills=100/8/12/4/5/6/1
w10 won lives=20 gold=907 kills=169 towerKills=102/10/17/5/11/19/5/0"
`;

exports[`golden replays > hemmung defense A 2`] = `"w10 won lives=20 gold=907 kills=169 towerKills=102/10/17/5/11/19/5/0"`;

exports[`golden replays > hemmung defense B 1`] = `
"w2 wave lives=20 gold=160 kills=10 towerKills=10
w3 wave lives=20 gold=327 kills=20 towerKills=20
w4 wave lives=20 gold=240 kills=37 towerKills=37/0
w5 wave lives=20 gold=232 kills=42 towerKills=41/1/0
w6 wave lives=20 gold=295 kills=60 towerKills=49/7/4/0
w7 wave lives=20 gold=317 kills=82 towerKills=54/13/15/0
w8 wave lives=20 gold=386 kills=97 towerKills=54/16/27/0
w9 wave lives=20 gold=515 kills=122 towerKills=60/24/37/1
w10 wave lives=20 gold=330 kills=132 towerKills=64/26/41/1/0
w10 won lives=20 gold=866 kills=169 towerKills=65/33/55/15/1/0"
`;

exports[`golden replays > hemmung defense B 2`] = `"w10 won lives=20 gold=866 kills=169 towerKills=65/33/55/15/1/0"`;

exports[`golden replays > herz-des-dschungels defense A 1`] = `
"w1 ready lives=20 gold=220 kills=13 towerKills=1/12
w2 ready lives=20 gold=243 kills=35 towerKills=1/34
w3 ready lives=20 gold=296 kills=53 towerKills=5/46/2
w4 ready lives=20 gold=231 kills=75 towerKills=5/68/2/0
w5 ready lives=20 gold=312 kills=87 towerKills=7/78/2/0
w6 ready lives=20 gold=392 kills=118 towerKills=15/97/6/0
w7 ready lives=20 gold=465 kills=144 towerKills=24/113/6/1
w8 ready lives=20 gold=508 kills=182 towerKills=33/135/13/1
w9 ready lives=20 gold=461 kills=206 towerKills=35/157/13/1
w10 ready lives=20 gold=557 kills=254 towerKills=37/196/20/1
w11 ready lives=20 gold=474 kills=279 towerKills=44/214/20/1
w12 ready lives=20 gold=512 kills=322 towerKills=58/235/28/1/0
w13 ready lives=20 gold=597 kills=357 towerKills=61/266/28/2/0
w14 ready lives=20 gold=583 kills=405 towerKills=62/304/37/2/0
w15 ready lives=20 gold=540 kills=434 towerKills=70/324/37/3/0/0
w16 ready lives=20 gold=679 kills=485 towerKills=75/361/46/3/0/0
w17 ready lives=20 gold=643 kills=520 towerKills=87/383/46/4/0/0
w18 ready lives=14 gold=357 kills=541 towerKills=91/395/46/4/4/1/0/0
w19 ready lives=14 gold=657 kills=596 towerKills=96/431/56/4/5/1/0/0/3
w20 won lives=14 gold=1353 kills=665 towerKills=108/464/64/5/12/5/0/0/7/0"
`;

exports[`golden replays > herz-des-dschungels defense A 2`] = `"w20 won lives=14 gold=1353 kills=665 towerKills=108/464/64/5/12/5/0/0/7/0"`;

exports[`golden replays > herz-des-dschungels defense B 1`] = `
"w1 ready lives=20 gold=220 kills=13 towerKills=1/12
w2 ready lives=20 gold=243 kills=35 towerKills=1/34
w3 ready lives=20 gold=296 kills=53 towerKills=5/46/2
w4 ready lives=20 gold=231 kills=75 towerKills=5/68/2/0
w5 ready lives=20 gold=312 kills=87 towerKills=7/78/2/0
w6 ready lives=20 gold=392 kills=118 towerKills=15/97/6/0
w7 ready lives=20 gold=465 kills=144 towerKills=24/113/6/1
w8 ready lives=20 gold=508 kills=182 towerKills=33/135/13/1
w9 ready lives=20 gold=461 kills=206 towerKills=35/157/13/1
w10 ready lives=20 gold=557 kills=254 towerKills=37/196/20/1
w11 ready lives=20 gold=474 kills=279 towerKills=44/214/20/1
w12 ready lives=20 gold=559 kills=322 towerKills=58/235/28/1/0/0
w13 ready lives=20 gold=545 kills=357 towerKills=62/265/28/2/0/0
w14 ready lives=20 gold=596 kills=405 towerKills=70/295/37/2/1/0/0
w15 ready lives=14 gold=533 kills=432 towerKills=76/310/37/3/5/0/1
w16 ready lives=14 gold=672 kills=483 towerKills=87/334/42/3/10/0/7
w17 ready lives=14 gold=611 kills=518 towerKills=101/349/42/6/13/0/7/0
w18 ready lives=8 gold=417 kills=539 towerKills=103/358/42/7/22/0/7/0/0
w19 ready lives=8 gold=701 kills=594 towerKills=118/379/52/7/28/0/9/0/1
w20 won lives=8 gold=1527 kills=663 towerKills=144/395/60/9/37/1/9/5/3"
`;

exports[`golden replays > herz-des-dschungels defense B 2`] = `"w20 won lives=8 gold=1527 kills=663 towerKills=144/395/60/9/37/1/9/5/3"`;

exports[`golden replays > riss defense A 1`] = `
"w1 ready lives=20 gold=115 kills=8 towerKills=8/0/0/0/0
w2 ready lives=20 gold=228 kills=23 towerKills=14/5/0/0/4
w3 ready lives=20 gold=286 kills=40 towerKills=21/5/3/4/7/0
w4 ready lives=20 gold=274 kills=59 towerKills=23/5/10/4/8/1/4/4
w5 ready lives=20 gold=286 kills=81 towerKills=27/6/13/8/9/1/7/9/1
w6 ready lives=20 gold=330 kills=98 towerKills=30/6/18/8/16/1/8/10/1
w7 ready lives=20 gold=426 kills=126 towerKills=32/7/24/11/20/1/17/13/1
w8 ready lives=20 gold=346 kills=145 towerKills=35/7/28/11/22/1/20/20/1
w9 ready lives=20 gold=488 kills=179 towerKills=39/9/35/20/23/1/24/27/1
w10 ready lives=20 gold=558 kills=209 towerKills=41/9/40/24/34/1/28/30/2
w11 ready lives=20 gold=597 kills=249 towerKills=43/9/51/24/43/1/39/36/3
w12 ready lives=20 gold=621 kills=289 towerKills=44/10/61/30/50/7/44/40/3
w13 ready lives=20 gold=559 kills=318 towerKills=46/12/69/30/54/7/51/46/3
w14 ready lives=20 gold=863 kills=361 towerKills=52/16/76/38/59/8/56/51/5
w15 ready lives=14 gold=787 kills=405 towerKills=60/21/83/46/61/8/66/55/5
w16 won lives=14 gold=836 kills=446 towerKills=65/22/87/57/68/9/69/63/6"
`;

exports[`golden replays > riss defense A 2`] = `"w16 won lives=14 gold=836 kills=446 towerKills=65/22/87/57/68/9/69/63/6"`;

exports[`golden replays > riss defense B 1`] = `
"w1 ready lives=20 gold=155 kills=8 towerKills=2/0/6/0
w2 ready lives=20 gold=210 kills=23 towerKills=8/0/10/1/4
w3 ready lives=20 gold=248 kills=40 towerKills=9/0/12/7/7/5
w4 ready lives=20 gold=278 kills=59 towerKills=9/0/13/14/11/10/1/1
w5 ready lives=20 gold=300 kills=81 towerKills=11/1/14/24/12/14/1/4
w6 ready lives=20 gold=314 kills=98 towerKills=13/1/15/30/14/17/1/7
w7 ready lives=20 gold=392 kills=126 towerKills=14/3/18/38/16/21/4/12
w8 ready lives=20 gold=393 kills=145 towerKills=14/5/18/45/19/22/4/18
w9 ready lives=14 gold=436 kills=173 towerKills=16/6/20/50/21/32/4/24
w10 ready lives=13 gold=420 kills=202 towerKills=19/13/24/55/27/34/5/25
w11 ready lives=13 gold=639 kills=242 towerKills=22/15/28/72/36/37/5/27
w12 ready lives=13 gold=663 kills=282 towerKills=24/17/32/88/39/39/7/36
w13 ready lives=13 gold=556 kills=311 towerKills=27/19/33/98/40/42/8/44
w14 ready lives=11 gold=805 kills=353 towerKills=32/25/40/108/40/44/13/51
w15 ready lives=7 gold=689 kills=398 towerKills=40/26/46/122/46/49/13/56
w16 won lives=7 gold=1068 kills=439 towerKills=45/31/48/137/49/52/13/64"
`;

exports[`golden replays > riss defense B 2`] = `"w16 won lives=7 gold=1068 kills=439 towerKills=45/31/48/137/49/52/13/64"`;

exports[`golden replays > schwerelos defense A 1`] = `
"w1 ready lives=20 gold=140 kills=8 towerKills=8/0
w2 ready lives=20 gold=219 kills=24 towerKills=18/6
w3 ready lives=20 gold=305 kills=40 towerKills=31/9/0
w4 ready lives=20 gold=294 kills=62 towerKills=38/18/1/5
w5 ready lives=18 gold=491 kills=86 towerKills=47/23/1/15
w6 ready lives=18 gold=425 kills=114 towerKills=53/36/1/24
w7 ready lives=14 gold=543 kills=146 towerKills=66/48/6/26
w8 ready lives=14 gold=530 kills=183 towerKills=71/52/7/53/0
w9 ready lives=10 gold=502 kills=217 towerKills=77/57/10/73/0
w10 ready lives=10 gold=567 kills=257 towerKills=88/57/10/102/0/0
w11 ready lives=10 gold=611 kills=293 towerKills=92/62/11/106/0/22
w12 ready lives=10 gold=810 kills=357 towerKills=102/69/31/116/0/39/0
w13 ready lives=10 gold=887 kills=412 towerKills=118/79/40/119/0/55/0/1
w14 ready lives=10 gold=863 kills=468 towerKills=138/85/44/137/0/61/0/3
w15 won lives=10 gold=1236 kills=536 towerKills=145/88/47/141/0/108/0/6/1"
`;

exports[`golden replays > schwerelos defense A 2`] = `"w15 won lives=10 gold=1236 kills=536 towerKills=145/88/47/141/0/108/0/6/1"`;

exports[`golden replays > schwerelos defense B 1`] = `
"w1 ready lives=20 gold=161 kills=8 towerKills=8/0
w2 ready lives=20 gold=240 kills=24 towerKills=15/9
w3 ready lives=20 gold=231 kills=40 towerKills=25/15
w4 ready lives=20 gold=338 kills=62 towerKills=37/23/2
w5 ready lives=20 gold=387 kills=87 towerKills=52/29/4/2
w6 ready lives=20 gold=396 kills=115 towerKills=62/38/6/9
w7 ready lives=16 gold=444 kills=147 towerKills=70/58/6/12/1
w8 ready lives=16 gold=569 kills=184 towerKills=73/79/6/21/3/2
w9 ready lives=12 gold=491 kills=218 towerKills=76/93/6/26/3/10/4
w10 ready lives=12 gold=598 kills=258 towerKills=78/112/9/29/7/16/7
w11 ready lives=12 gold=573 kills=294 towerKills=80/119/9/36/12/23/15
w12 ready lives=10 gold=944 kills=356 towerKills=81/139/10/49/13/40/24
w13 ready lives=6 gold=840 kills=407 towerKills=87/158/10/53/15/53/31
w14 ready lives=6 gold=1155 kills=463 towerKills=91/172/10/68/20/66/36
w15 won lives=3 gold=1235 kills=528 towerKills=107/192/19/77/30/67/36"
`;

exports[`golden replays > schwerelos defense B 2`] = `"w15 won lives=3 gold=1235 kills=528 towerKills=107/192/19/77/30/67/36"`;

exports[`golden replays > wetterleuchten defense A 1`] = `
"w1 ready lives=20 gold=173 kills=10 towerKills=10/0
w2 ready lives=20 gold=218 kills=21 towerKills=21/0
w3 ready lives=20 gold=219 kills=35 towerKills=23/12
w4 ready lives=20 gold=228 kills=43 towerKills=25/18/0
w5 ready lives=20 gold=352 kills=58 towerKills=33/23/2
w6 ready lives=20 gold=458 kills=86 towerKills=44/40/2
w7 ready lives=20 gold=527 kills=116 towerKills=60/48/8
w8 ready lives=20 gold=491 kills=132 towerKills=72/52/8
w9 ready lives=20 gold=480 kills=155 towerKills=82/60/13
w10 ready lives=20 gold=441 kills=180 towerKills=98/67/13/1/1
w11 ready lives=20 gold=489 kills=199 towerKills=103/76/13/5/2
w12 ready lives=20 gold=565 kills=230 towerKills=119/86/13/9/2/1
w13 ready lives=20 gold=781 kills=279 towerKills=136/102/21/13/3/3/1
w14 ready lives=14 gold=463 kills=298 towerKills=142/107/21/15/6/5/2
w15 ready lives=14 gold=553 kills=328 towerKills=149/113/29/19/9/7/2
w16 ready lives=14 gold=695 kills=363 towerKills=162/123/29/23/12/11/3
w17 won lives=14 gold=1014 kills=397 towerKills=168/128/36/27/17/13/8"
`;

exports[`golden replays > wetterleuchten defense A 2`] = `"w17 won lives=14 gold=1014 kills=397 towerKills=168/128/36/27/17/13/8"`;

exports[`golden replays > wetterleuchten defense B 1`] = `
"w1 ready lives=20 gold=173 kills=10 towerKills=10/0
w2 ready lives=20 gold=218 kills=21 towerKills=21/0
w3 ready lives=20 gold=219 kills=35 towerKills=23/12
w4 ready lives=20 gold=228 kills=43 towerKills=25/18/0
w5 ready lives=20 gold=352 kills=58 towerKills=33/23/2
w6 ready lives=20 gold=458 kills=86 towerKills=44/40/2
w7 ready lives=20 gold=527 kills=116 towerKills=60/48/8
w8 ready lives=20 gold=491 kills=132 towerKills=72/52/8
w9 ready lives=20 gold=480 kills=155 towerKills=82/60/13
w10 ready lives=20 gold=481 kills=180 towerKills=99/67/13/0/1
w11 ready lives=20 gold=444 kills=199 towerKills=108/71/13/3/4/0
w12 ready lives=20 gold=700 kills=230 towerKills=123/81/13/6/7/0
w13 ready lives=20 gold=839 kills=279 towerKills=136/96/22/10/14/1
w14 ready lives=20 gold=881 kills=301 towerKills=140/101/22/18/18/2
w15 ready lives=20 gold=971 kills=331 towerKills=149/104/25/24/27/2
w16 ready lives=20 gold=1113 kills=366 towerKills=157/111/25/31/37/5
w17 won lives=10 gold=1227 kills=399 towerKills=160/119/32/36/47/5"
`;

exports[`golden replays > wetterleuchten defense B 2`] = `"w17 won lives=10 gold=1227 kills=399 towerKills=160/119/32/36/47/5"`;
